--- a/WMS/Views/Products/_ProductKitItems.cshtml
+++ b/WMS/Views/Products/_ProductKitItems.cshtml
@@ -25,28 +25,13 @@
 
         settings.Columns.Add("SKUCode", "Item Code").Width = Unit.Percentage(15);
 
-        if (ViewBag.SelectionMode != true)
-        {
-            settings.Columns.Add(column =>
-            {
-                column.Width = Unit.Percentage(10);
-                column.Caption = "Quantity";
+        settings.Columns.Add(column =>
+{
+    column.Width = Unit.Percentage(10);
+    column.Caption = "Quantity";
+    column.FieldName = "Quantity";
+});
 
-
-                column.SetDataItemTemplateContent(m =>
-                {
-                    var qty = (decimal)DataBinder.Eval(m.DataItem, "Quantity");
-                    var id = (int)DataBinder.Eval(m.DataItem, "ProductId");
-
-                    ViewContext.Writer.Write("<div class='row recipe-item-qty-text'>" + qty + "<b class='btn fa fa-pencil'></b></div>" +
-                                             "<div class='row recipe-item-qty-edit' style='display:none'>" +
-                                             "<div class='row'><input type='text' class='form-control recipe-item-qty-textbox' placeholder='Quantity' value='" + qty + "'/></div>" +
-                                             "<div class='pull-right'> <button type='button' class='btn btn-sm btn-primary kititem-edit-qty-buttons' data-action='UpdateKitItemProduct' data-id='" + id + "'><b class='fa fa-save'></b></button><button type='button' class='btn btn-sm btn-danger kititem-edit-qty-buttons'><b class='fa fa-times'></b></button></div>" +
-                                             "</div>" +
-                                             "</div>");
-                });
-            });
-        }
 
         settings.Columns.Add(column =>
         {
@@ -58,32 +43,10 @@
                 var id = (int)DataBinder.Eval(m.DataItem, "ProductId");
                 var parentProductId = (int)DataBinder.Eval(m.DataItem, "ParentProductId");
                 var name = DataBinder.Eval(m.DataItem, "Name").ToString();
+                var kitId = (int)DataBinder.Eval(m.DataItem, "ProductKitId");
+                var function = string.Format("EditKitProduct({0},{1})", kitId, 1);
+                ViewContext.Writer.Write("<a onclick=" + function + "><i class='btn fa fa-pencil'></i></a><a class='btn fa fa-trash' role='button' data-valueid='" + id + "' data-action='RemoveKitItemProduct' title='Delete Kit Item' data-controller='Products' id='deleteBtn' data-title='Delete Kit Product' data-message='This cannot be reversed, are you sure you want to remove this Kit item?' data-toggle='modal' data-target='#confirm-delete'></a>");
 
-                if (ViewBag.SelectionMode == true)
-                {
-                    var spinEditHtml = Html.DevExpress().SpinEdit(s =>
-                    {
-                        s.Name = "KitProductQty_" + id.ToString();
-                        s.Properties.MinValue = 1; s.ControlStyle.CssClass = "recipeitem-select-lines";
-                        s.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                        s.ControlStyle.CssClass = "form-control";
-                        s.Properties.MaxValue = 10000000;
-
-                    }).GetHtml().ToHtmlString();
-
-                    var btnEditHtml = Html.DevExpress().Button(s =>
-                    {
-                        s.Name = "btnKitAddProduct_" + id.ToString(); s.ControlStyle.CssClass = "recipeitem-select-lines";
-                        s.Text = "+"; s.Width = Unit.Percentage(16);
-                        s.ClientSideEvents.Click = "function(s,e){_AddKitProduct(" + id + ",'" + name + "');}";
-                    }).GetHtml().ToHtmlString();
-                    ViewContext.Writer.Write("<div class='col-md-6'>" + spinEditHtml + "</div>" +
-                                             "<div class='col-md-4'>" + btnEditHtml + "</div>");
-                }
-                else
-                {
-                    ViewContext.Writer.Write("<a class='btn fa fa-trash' role='button' data-valueid='" + id + "' data-action='RemoveKitItemProduct' title='Delete Kit Item' data-controller='Products' id='deleteBtn' data-title='Delete Kit Product' data-message='This cannot be reversed, are you sure you want to remove this Kit item?' data-toggle='modal' data-target='#confirm-delete'></a>");
-                }
 
             });
         });
