Fixed the total amount being sent to paypal Imported from Changeset 2425

--- a/WarehouseEcommerce/Areas/Shop/Views/Orders/ConfirmOrder.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Orders/ConfirmOrder.cshtml
@@ -204,7 +204,7 @@
 
                                         <input type="hidden" name="item_name_1" value="@item.ProductMaster.Name">
                                         <input type="hidden" name="item_number_1" value="@item.ProductMaster.SKUCode">
-                                        <input type="hidden" name="amount_1" value="4.2">
+                                        <input type="hidden" name="amount_1" value="@item.TotalAmount">
                                         <input type="hidden" name="quantity_1" value="@item.Qty">
                                         break;
                                        
