Added a link to the ProductManufacturer images in footer to show the product images related to that and fixed a UI issue in the confirm order window Imported from Changeset 2427

--- a/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
@@ -4893,6 +4893,11 @@ a.cashbtn {
     width: 100%;
 }
 
+.order-details img {
+   text-overflow: ellipsis;
+   overflow: hidden;
+    }
+
 .ordered-items li span {
     font-weight: bold;
 }
