--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link href="~/Areas/Shop/Content/plugins/owl.carousel/owl.carousel.css" type="text/css" rel="stylesheet" media="screen" />
     <link href="~/Areas/Shop/Content/plugins/owl.carousel/owl.theme.css" type="text/css" rel="stylesheet" media="screen" />
     <link href="~/Areas/Shop/Content/plugins/magnific-popup/dist/magnific-popup.css" type="text/css" rel="stylesheet" media="screen" />
+    <link href="~/Areas/Shop/Content/Site.css" type="text/css" rel="stylesheet" media="screen" />
     @*<link href="/Content/app/css/app.css" rel="stylesheet">*@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
@@ -102,10 +103,10 @@
     @Html.Action("_FooterPartialArea", "Home")
 
 
-    
 
 
-    
+
+
     <script src="~/Areas/Shop/Content/plugins/elevatezoom/jquery.elevateZoom-3.0.8.min.js"></script>
     <!-- blog image zoom -->
     <script src="~/Areas/Shop/Content/plugins/lightbox2/js/lightbox.min.js"></script>
@@ -116,6 +117,7 @@
     <script src="~/Areas/Shop/Content/plugins/owl.carousel/owl.carousel.min.js"></script>
     <script src="~/Areas/Shop/Content/plugins/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
     <script src="~/Areas/Shop/Scripts/javascript-searchproduct.js"></script>
+    <script src="~/Areas/Shop/Content/app/js/custom.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
