--- a/WarehouseEcommerce/Areas/Shop/Views/Products/GroupedProductDetail.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/GroupedProductDetail.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Ganedata.Core.Entities.Domain
 @model ProductMaster
 @{
-    ViewBag.Title = Model.Name + " | " + ViewBag.SiteDescription;
+    ViewBag.Title = Model?.Name + " | " + ViewBag.SiteDescription??"";
 }
 <div id="product-product" class="container">
     <div class="row">
