--- a/WarehouseEcommerce/Areas/Shop/Views/Products/KitProductDetail.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/KitProductDetail.cshtml
@@ -24,7 +24,7 @@
                     <li><a href="@Url.Action("list", "Products", new { category = Model.ProductCategory?.ProductCategoryName, group = Model.ProductGroup?.ProductGroup, department = Model.TenantDepartment?.DepartmentName })">@(!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName) ? Model.ProductCategory.ProductCategoryName : "")</a></li>
                 }
 
-                <li>@Model.Name</li>
+                <li>@Model.Name</li> 
             </ul>
 
             <div>
@@ -58,13 +58,13 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-5 pro-content">
+                    <div class="col-sm-6 pro-content">
                         <div class="tab-group rates-page-tabs">
                             <!-- Nav tabs -->
                             <ul class="nav nav-tabs responsive" role="tablist">
                                 <li role="presentation" class="active"><a href="#loan-rates" aria-controls="loan-rates" role="tab" data-toggle="tab">Options</a></li>
                                 <li role="presentation"><a href="#mortgage-rates" aria-controls="mortgage-rates" role="tab" data-toggle="tab">Extended Warranty</a></li>
-                                <li role="presentation"><a href="#checking-savings-rates" aria-controls="checking-savings-rates" role="tab" data-toggle="tab">Checking &amp; Accessories</a></li>
+                                <li role="presentation"><a href="#checking-savings-rates" aria-controls="checking-savings-rates" role="tab" data-toggle="tab">Accessories</a></li>
                             </ul>
 
                             <!-- Tab panes -->
@@ -108,7 +108,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <button type="button" class="acart disabled-btn" disabled><span>Add to Basket</span></button>
+                                                    <button type="button" class=" btn btn-block disabled-btn" disabled><span>Add to Basket</span></button>
                                                 }
 
                                             </div>
@@ -116,96 +116,12 @@
                                     </div>
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="mortgage-rates">
-                                    <div class="cartitem-details">
-                                        <div class="cartitem-imgtext ">
-                                            <div class="cartitem-text">
-                                                <p><a href=""><strong>@Model.Name</strong></a></p>
-                                                <p><b style="color: #007600 !important;">@(Model.InventoryStocks.Count == 0 ? "Not Avaialable" : "In Stock")</b></p>
-                                                <p><b>Brands:</b> <span>@(Model.ProductManufacturer == null ? "" : Model.ProductManufacturer.Name)</span></p>
-                                                <p><b>SKU Code:</b> <span>@Model.SKUCode</span></p>
-                                                <p><b>Product Code::</b> <span>@Model.BarCode</span></p>
-                                                <p><b>Size:</b> <span>M</span></p>
-
-                                                <p>
-                                                    <div class=" required ">
-                                                        <label class="control-label" for="input-option226">Select Available Option</label>
-                                                        <select name="option[226]" id="input-option226" class="form-control">
-                                                            <option value=""> --- Please Select --- </option>
-                                                            <option value="black">
-                                                                Black
-                                                            </option>
-                                                        </select>
-                                                    </div>
-                                                </p>
-                                                <p class="cart-quantity">
-                                                    <b>Quantity:</b> <input type="number" min="0" placeholder="Qty" onchange="" value="1" />
-                                                    <a href="javascript:;" class="remove-btn cart-del" onclick=""><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</a>
-                                                </p>
-
-                                            </div>
-                                        </div>
-                                        <div class="cartitem-price">
-                                            <p><span>Price:</span><b>@ViewBag.CurrencySymbol @Model.SellPrice</b></p>
-                                            <p><span>Total:</span><b>@ViewBag.CurrencySymbol @Model.SellPrice</b></p>
-                                            <div class="button-submit">
-                                                @if (@Model.SellPrice > 0 && @Model.SellPrice.HasValue && @Model.PercentMargin > 0)
-                                                {
-                                                    <button type="Submit" name="submitNewsletter" class="btn btn-block move-to-cart-btn" id="button-cart" onclick="AddToCart(@Model.ProductId)">Add to Basket</button>
-                                                }
-                                                else
-                                                {
-                                                    <button type="button" class="acart disabled-btn" disabled><span>Add to Basket</span></button>
-                                                }
-
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <h3>Extended Warranty</h3>
+                                    <p>Paste something here...</p>
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="checking-savings-rates">
-                                    <div class="cartitem-details">
-                                        <div class="cartitem-imgtext ">
-                                            <div class="cartitem-text">
-                                                <p><a href=""><strong>@Model.Name</strong></a></p>
-                                                <p><b style="color: #007600 !important;">@(Model.InventoryStocks.Count == 0 ? "Not Avaialable" : "In Stock")</b></p>
-                                                <p><b>Brands:</b> <span>@(Model.ProductManufacturer == null ? "" : Model.ProductManufacturer.Name)</span></p>
-                                                <p><b>SKU Code:</b> <span>@Model.SKUCode</span></p>
-                                                <p><b>Product Code::</b> <span>@Model.BarCode</span></p>
-                                                <p><b>Size:</b> <span>M</span></p>
-
-                                                <p>
-                                                    <div class=" required ">
-                                                        <label class="control-label" for="input-option226">Select Available Option</label>
-                                                        <select name="option[226]" id="input-option226" class="form-control">
-                                                            <option value=""> --- Please Select --- </option>
-                                                            <option value="black">
-                                                                Black
-                                                            </option>
-                                                        </select>
-                                                    </div>
-                                                </p>
-                                                <p class="cart-quantity">
-                                                    <b>Quantity:</b> <input type="number" min="0" placeholder="Qty" onchange="" value="1" />
-                                                    <a href="javascript:;" class="remove-btn cart-del" onclick=""><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</a>
-                                                </p>
-
-                                            </div>
-                                        </div>
-                                        <div class="cartitem-price">
-                                            <p><span>Price:</span><b>@ViewBag.CurrencySymbol @Model.SellPrice</b></p>
-                                            <p><span>Total:</span><b>@ViewBag.CurrencySymbol @Model.SellPrice</b></p>
-                                            <div class="button-submit">
-                                                @if (@Model.SellPrice > 0 && @Model.SellPrice.HasValue && @Model.PercentMargin > 0)
-                                                {
-                                                    <button type="Submit" name="submitNewsletter" class="btn btn-block move-to-cart-btn" id="button-cart" onclick="AddToCart(@Model.ProductId)">Add to Basket</button>
-                                                }
-                                                else
-                                                {
-                                                    <button type="button" class="acart disabled-btn" disabled><span>Add to Basket</span></button>
-                                                }
-
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <h3>Accessories</h3>
+                                    <p>Paste something here...</p>
                                 </div>
                             </div>
                         </div>
@@ -281,55 +197,3 @@
 
     </div>
 </div>
-
-
-
-
-<div class="container">
-
-    <div class="tab-group rates-page-tabs">
-        <!-- Nav tabs -->
-        <ul class="nav nav-tabs responsive" role="tablist">
-            <li role="presentation" class="active"><a href="#loan-rates" aria-controls="loan-rates" role="tab" data-toggle="tab">Loan Rates</a></li>
-            <li role="presentation"><a href="#mortgage-rates" aria-controls="mortgage-rates" role="tab" data-toggle="tab">Mortgage Rates</a></li>
-            <li role="presentation"><a href="#checking-savings-rates" aria-controls="checking-savings-rates" role="tab" data-toggle="tab">Checking &amp; Savings Rates</a></li>
-        </ul>
-
-        <!-- Tab panes -->
-        <div class="tab-content responsive">
-            <div role="tabpanel" class="tab-pane active" id="loan-rates">
-                @*<div class="content-wrapper select">*@
-                    <div class="cartitem-details">
-                        <div class="cartitem-imgtext ">
-                            <div class="cartitem-text">
-                                <p><a href=""><strong>Product_Name</strong></a></p>
-                                <p><b style="color: #007600 !important;">In Stock</b></p>
-                                <p><b>SKU:</b> <span>SKUCode_100k8439</span></p>
-                                <p><b>Size:</b> <span>M</span></p>
-
-                                <p class="cart-quantity">
-                                    <b>Quantity:</b> <input type="number" min="0" placeholder="Qty" onchange="" value="1" />
-                                    <a href="javascript:;" class="remove-btn cart-del" onclick=""><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</a>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="cartitem-price">
-                            <p><span>Price:</span><b>1100</b></p>
-                            <p><span>Total:</span><b>1100</b></p>
-                            <div class="button-submit">
-                                <button type="Submit" name="submitNewsletter" class="btn btn-block move-to-cart-btn">Move to Cart</button>
-                            </div>
-                        </div>
-                    </div>
-                @*</div>*@
-            </div>
-            <div role="tabpanel" class="tab-pane" id="mortgage-rates">
-
-            </div>
-            <div role="tabpanel" class="tab-pane" id="checking-savings-rates">
-
-            </div>
-        </div>
-    </div>
-
-</div><!-- /.container -->
