--- a/WMS/Views/Products/Create.cshtml
+++ b/WMS/Views/Products/Create.cshtml
@@ -33,7 +33,7 @@
 {
     @Html.AntiForgeryToken()
     <div id="tabs" style="visibility: hidden">
-     
+
         <div class="col-md-6 pull-left">
             @Html.ValidationSummary(true)
             <div class="input-group h-100 justify-content-center align-items-center">
@@ -126,11 +126,17 @@
                 <div class="input-group h-100 justify-content-center align-items-center" id="dvgrp">
                     @Html.LabelFor(model => model.ProductGroup, htmlAttributes: new { @class = "col-md-4 kitlabel" })
                     <div class="col-md-8">
-
-                        @Html.Action("_ProductKitCombobox", new { ProductId = Model.ProductId })
-                        @Html.Hidden("ProductKit")
-
+                        <div class="col-11 p-0 mt-1 pull-left">
+                            @Html.ListBox("ProductGroupIds", new MultiSelectList(ViewBag.ProductgroupIds, "", ""), new { Multiple = "multiple", @class = "chosen-select", data_placeholder = "Choose Product Groups" })
+                        </div>
+                        <div class="col-1 p-0 pull-left">
+                            <input type="button" onclick="ShowProductGroupPopUp();" id="ProdGroupAdd" class="btn btn-primary" value="+">
+                        </div>
                     </div>
+                    @*@Html.Action("_ProductKitCombobox", new { ProductId = Model.ProductId })
+                        @Html.Hidden("ProductKit")*@
+
+
                 </div>
                 <div class="input-group h-100 justify-content-center align-items-center divchkkit">
                     @Html.LabelFor(model => model.Kit, htmlAttributes: new { @class = "col-md-4" })
@@ -142,14 +148,14 @@
                     @Html.LabelFor(model => model.Kit, htmlAttributes: new { @class = "col-md-4" })
                     <div class="col-md-8">
                         <div class="col-11 p-0 mt-1 pull-left">
-                            @Html.ListBox("ProductKitIds", new MultiSelectList(ViewBag.ProductKitItems,"",""), new { Multiple = "multiple", @class = "chosen-select", data_placeholder = "Choose Product Kit" })
+                            @Html.ListBox("ProductKitIds", new MultiSelectList(ViewBag.ProductKitItems, "", ""), new { Multiple = "multiple", @class = "chosen-select", data_placeholder = "Choose Product Kit" })
                         </div>
                         <div class="col-1 p-0 pull-left">
                             <input type="button" onclick="javascript: pcModalKitProduct.Show();" id="ProdkitAdd" class="btn btn-primary" value="+">
                         </div>
                     </div>
                 </div>
-             
+
             </div>
 
             <div class="input-group h-100 justify-content-center align-items-center">
